# log-generator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  report.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
loggen/: __init__.py  main.py  metrics.py
tests/: test_log_generator.py  test_metrics.py
