[project]
name = "log-generator"
version = "1.0.0"
description = "A continuous log generator."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Duy nè", email = "hello@duyne.me"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.0.0,<9.0.0",
    "prometheus_client>=0.19.0,<1.0.0",
]
urls = {homepage = "https://github.com/duyhenryer/log-generator"}

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "prometheus_client>=0.19.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "prometheus_client>=0.19.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.scripts]
log-generator = "loggen.main:main"

[tool.pytest.ini_options]
addopts = "--cov=loggen --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.setuptools.packages.find]
include = ["loggen*"]
where = ["."]
